# liquid-benchmark

./: .gitignore  .gitmodules  Makefile  README.md  benchmarks.csv  benchmarks.html  default.nix  liquid-benchmark.cabal  result-vrdt.org  result-vrdt.txt  stack.yaml  vrdt_results
src/: Main.hs
