name:                liquid-benchmark
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yiyunliu/liquid-benchmark#readme
license:             BSD3
license-file:        LICENSE
author:              Yiyun Liu
maintainer:          liuyiyun@terpmail.umd.edu
copyright:           2020 Yiyun Liu
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable liquid-benchmark
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , deepseq
                     , directory
                     , dsp
                     , liquidhaskell
                     , process
                     , timeit
                     , pipes
                     , optparse-applicative
  ghc-options: -threaded